Correct vertical spacing of homepage slogan

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -75,7 +75,7 @@ main,
   font-size: 22px;
   text-align: center;
   max-width: 720px;
-  margin: 60px auto;
+  margin: 0 auto 60px auto;
   line-height: 1.6;
   color: #444;
 }
